--- a/src/index.html
+++ b/src/index.html
@@ -41,9 +41,11 @@
             художній <br>
             музей
           </h1>
-          <div class="header__button button button--header">
+          <a
+            href="#actual"
+            class="header__button button button--header">
             квитки
-          </div>
+          </a>
         </div>
       </div>
       <div class="header__logo-background"></div>
@@ -61,7 +63,7 @@
                 Галерея
               </a>
               <a
-                href="#schedule"
+                href="#actual"
                 class="menu__link"
               >
               Виставки та Події
@@ -69,19 +71,20 @@
             </div>
             <div class="menu__2">
               <a
-                href="#actual"
+                href="#home"
                 class="menu__link"
               >
               Про Нас
               </a>
               <a
-                href="#contacts"
+                href="#subscribe"
                 class="menu__link"
               >
                 Контакти
               </a>
             </div>
           </div>
+
         </div>
         <div class="menu__divider"></div>
         <div class="menu__description" id="schedule">
@@ -246,9 +249,26 @@
             <div class="subscribe__description">
               Бути в курсі всіх актуальних подій та останніх новин.
             </div>
-            <div class="subscribe__button button button--subscribe">
-              E-mail
-            </div>
+          </div>
+          <div class="subscribe__form-container">
+            <form
+              action="#contacts-form"
+              method="get"
+              id="contacts-form"
+              class="subscribe__form"
+          >
+              <input
+                name="email"
+                id="email"
+                placeholder="Email"
+                type="email"
+                class="subscribe__form-field"
+                required
+              >
+              <button
+              class="subscribe__button">
+              </button>
+            </form>
           </div>
         </div>
       </section>
@@ -265,8 +285,16 @@
             >
           </a>
           <div class="footer__social">
-            <a href="#" class="icons icons--social icons--fb"></a>
-            <a href="#" class="icons icons--social icons--instagram"></a>
+            <a
+              href="https://www.facebook.com/namu.museum/?locale=uk_UA"
+              class="icons icons--social icons--fb"
+              target="_blank"
+              ></a>
+            <a
+              href="https://www.instagram.com/namu.museum/"
+              class="icons icons--social icons--instagram"
+              target="_blank"
+            ></a>
           </div>
         </div>
         <div class="footer__schedule">
@@ -287,16 +315,35 @@
         <div class="footer__contacts" id="contacts">
           Контакти:
           <br><br>
-          вул. М. Грушевського, 6; Київ, 01001
-          <br>
+          <a
+            class="footer__contacts-link"
+            href="https://goo.gl/maps/EvNRkHonLZqkDWZE9"
+            target="_blank">
+            вул. М. Грушевського, 6; Київ, 01001
+          </a>
+          <a
+            class="footer__contacts-link"
+            href="tel:+380442781357"
+          >
           тел. +38 (044) 278-13-57
-          <br>
-          факс +38 (044) 278-74-54
-          <br>
-          e-mail: info@namu.kiev.ua
+          </a>
+
+          <a
+            href="tel:+380442787454"
+            class="footer__contacts-link"
+          >
+            факс +38 (044) 278-74-54
+          </a>
+
+          <a
+            class="footer__contacts-link" href="mailto:">e-mail: info@namu.kiev.ua
+          </a>
         </div>
         <div class="footer__arrow-up">
-          <a href="#home" class="icons icons--arrow-up"></a>
+          <a
+            href="#home"
+            class="icons icons--arrow-up">
+          </a>
         </div>
         <div class="footer__divider">
         </div>
@@ -308,7 +355,7 @@
             Галерея
           </a>
           <a
-            href="#schedule"
+            href="#actual"
             class="menu__link menu__link--footer"
           >
           Виставки та Події
@@ -316,13 +363,13 @@
         </div>
         <div class="footer__menu-2">
           <a
-            href="#actual"
+            href="#home"
             class="menu__link menu__link--footer"
           >
             Про Нас
           </a>
           <a
-            href="#contacts"
+            href="#subscribe"
             class="menu__link menu__link--footer"
           >
             Контакти
