--- a/src/index.html
+++ b/src/index.html
@@ -151,8 +151,8 @@
                 grid__item--desktop-9-12
               ">
                 <div class="exhibit__event-and-date-box">
-                  <div class="exhibit__event">ВИСТАВКА</div>
-                  <div class="exhibit__date">26.08-29.11.2019</div>
+                  <p class="exhibit__event">ВИСТАВКА</p>
+                  <p class="exhibit__date">26.08-29.11.2019</p>
                 </div>
                 <h3 class="
                   exhibit__title
@@ -193,8 +193,8 @@
                 <div class="
                 exhibit__event-and-date-box
                 ">
-                  <div class="exhibit__event">ВИСТАВКА</div>
-                  <div class="exhibit__date">26.08-29.11.2019</div>
+                  <p class="exhibit__event">ВИСТАВКА</p>
+                  <p class="exhibit__date">26.08-29.11.2019</p>
                 </div>
 
                 <h3 class="
@@ -225,8 +225,8 @@
 
               <div class="lecture__plate">
                 <div class="lecture__event-and-date-box">
-                  <div class="lecture__event">ЛЕКЦІЯ</div>
-                  <div class="lecture__date">26/08/2019 - 11:00</div>
+                  <p class="lecture__event">ЛЕКЦІЯ</p>
+                  <dpv class="lecture__date">26/08/2019 - 11:00</dpv>
                 </div>
                 <h3 class="lecture__title">
                   Від класицизму до романтизму
@@ -238,10 +238,10 @@
         </div>
       </section>
 
-      <section class="page__gallety gallery" id="gallery">
+      <section class="page__gallery gallery" id="gallery">
         <div class="container">
 
-          <div class="gallery__title">Галерея</div>
+          <p class="gallery__title">Галерея</p>
 
           <div class="gallery__slides">
             <input
@@ -324,9 +324,9 @@
             Підписка
           </div>
 
-          <div class="subscription__description">
+          <p class="subscription__description">
             Бути в курсі всіх актуальних подій та останніх новин.
-          </div>
+          </p>
 
           <form
             action="/"
