--- a/src/index.html
+++ b/src/index.html
@@ -52,41 +52,42 @@
     </div>
     <aside class="menu page__menu" id="menu">
       <div class="menu__content">
-        <div class="menu__top-container">
+        <div class="menu__top-content">
           <a href="#" class="icons icons--cross"></a>
-          <div class="menu__top-content">
-            <div class="menu__1">
-              <a
-                href="#galery"
-                class="menu__link"
-              >
-                Галерея
-              </a>
-              <a
-                href="#actual"
-                class="menu__link"
-              >
-              Виставки та Події
-              </a>
-            </div>
-            <div class="menu__2">
-              <a
-                href="#home"
-                class="menu__link"
-              >
-              Про Нас
-              </a>
-              <a
-                href="#subscribe"
-                class="menu__link"
-              >
-                Контакти
-              </a>
-            </div>
+          <div class="menu__1">
+            <a
+              href="#galery"
+              class="menu__link"
+            >
+              Галерея
+            </a>
+            <a
+              href="#actual"
+              class="menu__link"
+            >
+            Виставки<br>
+            та Події
+            </a>
           </div>
+          <div class="menu__2">
+            <a
+              href="#home"
+              class="menu__link"
+            >
+            Про Нас
+            </a>
 
+            <a
+              href="#subscribe"
+              class="menu__link"
+            >
+              Контакти
+            </a>
+          </div>
         </div>
+
         <div class="menu__divider"></div>
+
         <div class="menu__description" id="schedule">
 
           <span class="menu__description-1">
@@ -223,7 +224,7 @@
                     class="galery__photo"
                   >
                 </div>
-                
+
                 <div id="slide-4" class="slider__slide slider__slide--4">
                   <img
                     src="./images/galery4.png"
