--- a/src/index.html
+++ b/src/index.html
@@ -298,8 +298,8 @@
                   class="icon icon--logo"
                 >
                 <div class="footer__socials">
-                  <a href="#" class="icon socials__link socials__link--facebook"> </a>
-                  <a href="#" class="icon socials__link socials__link--instagram"> </a>
+                  <a href="https://uk-ua.facebook.com/" class="icon socials__link socials__link--facebook"></a>
+                  <a href="https://www.instagram.com/" class="icon socials__link socials__link--instagram"></a>
                 </div>
               </a>
             </div>
