Fixed links and icons

--- a/src/index.html
+++ b/src/index.html
@@ -296,11 +296,20 @@
               <div class="footer__contacts">
                 <div class="footer__contacts-container">
                   <h4 class="footer__subtitle">Контакти:</h4>
-                  <p  class="footer__contacts-text">вул. M. Грушевського 6,</p>
-                  <p class="footer__contacts-text">Київ, 01001</p>
-                  <p class="footer__contacts-text">тел. +38 (044) 278-13-57</p>
-                  <p class="footer__contacts-text">факс +38 (044) 278-74-54</p>
-                  <p class="footer__contacts-text">e-mail: info@namu.kiev.ua</p>
+                  <a
+                    href="https://maps.app.goo.gl/xN2DuKN9hfhKJSNY6" target="_blank"
+                    class="footer__contacts-text">
+                      вул. M. Грушевського 6; Київ, 01001
+                  </a>
+                  <br>
+                  <a href="tel:+380442781357" class="footer__contacts-text">тел. +38 (044) 278-13-57</a><br>
+                  <a href="tel:+380442787454" class="footer__contacts-text">факс +38 (044) 278-74-54</a>
+                  <a
+                    href="mailto:info@namu.kiev.ua"
+                    target="_blank"
+                    class="footer__contacts-text">
+                      e-mail: info@namu.kiev.ua
+                  </a>
                 </div>
               </div>
             </div>
@@ -308,7 +317,7 @@
             <a href="#body" class="footer__to-top-link">
               <div class="footer__to-top-icon">
                 <img
-                  src="/images/footer-to-top-icon.png"
+                  src="/images/Arrow up.svg"
                   alt="arrow"
                 >
               </div>
