--- a/src/index.html
+++ b/src/index.html
@@ -15,45 +15,43 @@
       <div class="container">
         <div class="header__top-action">
           <a href="#menu__page" class="menu-button icon"></a>
-          <a href="#" class="header__main-logo icon"></a>
+          <a href="#" class="main-logo icon"></a>
         </div>
       </div>
     </header>
     <main>
-      <div class="container">
-        <section class="art-museum" id="museum">
-          <h1 class="art-museum__title">ХУДОЖНІЙ МУЗЕЙ</h1>
-          <a href="#" class="art-museum__button">
-            КВИТКИ
-            <div class="art-museum__button-arrow"></div>
-          </a>
-        </section>
-      </div>
-      <div class="container">
-        <section class="events" id="events">
+      <section class="art-museum container" id="museum">
+        <h1 class="art-museum__title">ХУДОЖНІЙ МУЗЕЙ</h1>
+        <a href="#" class="art-museum__button">
+          КВИТКИ
+          <div class="art-museum__button-arrow"></div>
+        </a>
+      </section>
 
-          <h2 class="events__title">Актуальні події</h2>
-          <div class="events-card">
-            <div class="events-card__image events-card__image-1"></div>
-            <div class="events-card__info">
-              <p class="events-card__type">ВИСТАВКА</p>
-              <p class="events-card__schedule">26.08-29.11.2019</p>
-            </div>
-            <h3 class="events-card__title">Йду і повертаюсь</h3>
-            <div class="events-card__description">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</div>
+
+      <section class="events container" id="events">
+
+        <h2 class="events__title">Актуальні події</h2>
+        <div class="events-card">
+          <div class="events-card__image events-card__image-1"></div>
+          <div class="events-card__info">
+            <p class="events-card__type">ВИСТАВКА</p>
+            <p class="events-card__schedule">26.08-29.11.2019</p>
           </div>
-  
-          <div class="events-card">
-            <div class="events-card__image events-card__image-2"></div>
-            <div class="events-card__info">
-              <p class="events-card__type">ВИСТАВКА</p>
-              <p class="events-card__schedule">26.08-29.11.2019</p>
-            </div>
-            <h3 class="events-card__title">І спогади і мрії</h3>
-            <div class="events-card__description">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</div>
+          <h3 class="events-card__title">Йду і повертаюсь</h3>
+          <div class="events-card__description">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</div>
+        </div>
+        <div class="events-card">
+          <div class="events-card__image events-card__image-2"></div>
+          <div class="events-card__info">
+            <p class="events-card__type">ВИСТАВКА</p>
+            <p class="events-card__schedule">26.08-29.11.2019</p>
           </div>
-        </section>
-      </div>
+          <h3 class="events-card__title">І спогади і мрії</h3>
+          <div class="events-card__description">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</div>
+        </div>
+      </section>
+
       <section class="lections">
         <div class="lections__poster"></div>
         <div class="container">
@@ -66,12 +64,139 @@
           </div>
         </div>
       </section>
-      <section class="gallery" id="gallery">
+
+      <section class="gallery container" id="gallery">
         <h2 class="gallery__title">Галерея</h2>
+        <div class="gallery__slider">
+          <img
+            class="slider-item"
+            src="./images/blocks/gallery/img-1.png"
+            alt="image 1"
+          >
+          <img
+            class="slider-item hiden"
+            src="./images/blocks/gallery/img-2.png"
+            alt="image 2"
+          >
+          <img
+            class="slider-item hiden"
+            src="./images/blocks/gallery/img-3.png"
+            alt="image 3"
+          >
+          <img
+            class="slider-item hiden"
+            src="./images/blocks/gallery/img-4.png"
+            alt="image 4"
+          >
+        </div>
+        <div class="gallery__nav-buttons-box">
+          <div class="nav-button-item icon active"></div>
+          <div class="nav-button-item icon"></div>
+          <div class="nav-button-item icon"></div>
+          <div class="nav-button-item icon"></div>
+        </div>
       </section>
-      <section class="subscribe" id="subscribe"></section>
+      <section class="subscribe" id="subscribe">
+        <h2 class="subscribe__title">Підписка</h2>
+        <p class="subscribe__text">Бути в курсі всіх актуальних подій та останніх новин.</p>
+        <form
+          class="subscribe__form"
+          action="#"
+          onsubmit="return false;"
+        >
+          <input
+            type="email"
+            class="form-field"
+            name="email"
+            placeholder="E-mail"
+          >
+          <a href="#" class="subscribe__button">
+            <div class="subscribe__button-arrow"></div>
+          </a>
+        </form>
+      </section>
     </main>
-    <footer class="footer"></footer>
+    <footer class="footer">
+      <div class="footer__top-action">
+        <a href="/" class="main-logo icon"></a>
+        <div class="social-links">
+          <a
+            href="https://www.facebook.com/namu.museum"
+            class="social-link facebook-link icon"
+            target="_blank"
+          >
+          </a>
+          <a
+            href="https://www.instagram.com/namu.museum/"
+            class="social-link instagram-link icon"
+            target="_blank"
+          >
+          </a>
+        </div>
+      </div>
+      <div class="footer__content-wrapper">
+        <div class="footer__content">
+          <div class="footer__schedule">
+            <p class="footer__schedule-title">Графік роботи</p>
+            <strong class="schedule-time">12:00-20:00</strong>
+            середа
+            <strong class="schedule-time">12:00-20:00</strong>
+            четвер
+            <strong class="schedule-time">12:00-20:00</strong>
+            п'ятниця
+            <strong class="schedule-time">11:00-19:00</strong>
+            субота
+            <strong class="schedule-time">11:00-19:00</strong>
+            неділя
+            <div class="schedule-details"><br>Вихідні понеділок, вівторок. <br> Каса припиняє роботу за 1 годину до закриття музею</div>
+          </div>
+          <div class="footer__contacts" id="contacts">
+            <p class="footer__contacts-title">Контакти:</p>
+            <a
+              href="https://maps.app.goo.gl/wHsUsCwskg7ocJEy9"
+              class="footer__contacts-item"
+              target="_blank"
+            >
+              вул. М. Грушевського, 6; Київ, 01001
+            </a>
+            <a href="tel:+380442781357" class="footer__contacts-item">тел. +38 (044) 278-13-57</a>
+            <a href="tel:+380442787454" class="footer__contacts-item">факс +38 (044) 278-74-54</a>
+            <a 
+              href="mailto:info@namu.kiev.ua" 
+              class="footer__contacts-item"
+              target="_blank"
+            >
+              e-mail: info@namu.kiev.ua
+            </a>
+          </div>
+          <a href="#" class="scroll-up__link icon"></a>
+        </div>
+      </div>
+      <nav class="footer__menu">
+        <ul class="footer__menu-list">
+          <div class="footer__menu-column">
+            <li class="footer__menu-item">
+              <a href="#gallery" class="footer__menu-link main-link">Галерея</a>
+            </li>
+            <li class="footer__menu-item">
+              <a href="#events" class="footer__menu-link">Виставки та події</a>
+            </li>
+          </div>
+          <div class="footer__menu-column">
+            <li class="footer__menu-item">
+              <a href="#" class="footer__menu-link">Про нас</a>
+            </li>
+            <li class="footer__menu-item">
+              <a href="#contacts" class="footer__menu-link">Контакти</a>
+            </li>
+          </div>
+        </ul>
+      </nav>
+      <div class="rights-information">
+        <p class="rights-information__item">Designed by Zhyriada Marina</p>
+        <p class="rights-information__item">Copyright © 2019. All Rights Reserved.</p>
+      </div>
+    </footer>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
