remake slider by swiper, fix close button for menu, disable content on menu open

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Inter:wght@400;700;800&family=Montserrat:wght@300;400;500;700&family=Open+Sans:wght@400;600&family=Poppins:wght@600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js" defer></script>
     <script src="./scripts/main.js" defer></script>
   </head>
   <body class="page__body">
@@ -47,6 +50,13 @@
             квитки
           </a>
         </div>
+        <a href="#actual" class="header__events">
+          <img
+                  class="header__events-image"
+                  src="images/events.svg"
+                  alt="Natsionalnij-hudozhnij-muzej-Ukrayini-Kiyiv"
+                >
+        </a>
       </div>
       <div class="header__logo-background"></div>
     </div>
@@ -198,47 +208,76 @@
           <h2 class="page__section-title galery__title">
             Галерея
           </h2>
-          <div class="galery__slider">
-            <div class="slider">
-              <div class="slider__slides">
-                <div id="slide-1" class="slider__slide slider__slide--1">
-                  <img
-                  src="./images/galery1.png"
+
+          <div class="galery__photos">
+            <div class="galery__photo-container galery__photo-container--1">
+              <img
+              src="./images/galery1.png"
+              alt="Галерея"
+              class="galery__photo"
+            >
+            </div>
+
+            <div class="galery__photo-container galery__photo-container--2">
+              <img
+                src="./images/galery2.png"
+                alt="Галерея"
+                class="galery__photo"
+              >
+            </div>
+
+            <div class="galery__photo-container galery__photo-container--3">
+              <img
+                src="./images/galery3.png"
+                alt="Галерея"
+                class="galery__photo"
+              >
+            </div>
+
+            <div class="galery__photo-container galery__photo-container--4">
+              <img
+                src="./images/galery4.png"
+                alt="Галерея"
+                class="galery__photo"
+              >
+            </div>
+          </div>
+
+          <div class="galery__slider swiper">
+            <div class="swiper-wrapper">
+              <div id="slide-1" class="swiper-slide slider__slide">
+                <img
+                src="./images/galery1.png"
+                alt="Галерея"
+                class="slider__img"
+              >
+              </div>
+
+              <div id="slide-2" class="swiper-slide slider__slide">
+                <img
+                  src="./images/galery2.png"
                   alt="Галерея"
-                  class="galery__photo"
+                  class="slider__img"
                 >
-                </div>
-
-                <div id="slide-2" class="slider__slide slider__slide--2">
-                  <img
-                    src="./images/galery2.png"
-                    alt="Галерея"
-                    class="galery__photo"
-                  >
-                </div>
-
-                <div id="slide-3" class="slider__slide slider__slide--3">
-                  <img
-                    src="./images/galery3.png"
-                    alt="Галерея"
-                    class="galery__photo"
-                  >
-                </div>
-
-                <div id="slide-4" class="slider__slide slider__slide--4">
-                  <img
-                    src="./images/galery4.png"
-                    alt="Галерея"
-                    class="galery__photo"
-                  >
-                </div>
               </div>
-              <div class="slider__links">
-                <a href="#slide-1" class="slider__link"></a>
-                <a href="#slide-2" class="slider__link"></a>
-                <a href="#slide-3" class="slider__link"></a>
-                <a href="#slide-4" class="slider__link"></a>
+
+              <div id="slide-3" class="swiper-slide slider__slide">
+                <img
+                  src="./images/galery3.png"
+                  alt="Галерея"
+                  class="slider__img"
+                >
               </div>
+
+              <div id="slide-4" class=" swiper-slide slider__slide">
+                <img
+                  src="./images/galery4.png"
+                  alt="Галерея"
+                  class="slider__img"
+                >
+              </div>
+            </div>
+            <div class="swiper-pagination">
             </div>
           </div>
         </div>
