--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,486 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>NAMU</title>
+    <link rel="icon" href="./images/logo/logo-namu.svg">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page__body">
+
+    <header class="header">
+      <div class="container">
+        <div class="header__content">
+          <div class="header__top">
+            <a href="#menu" class="icon icon__menu"></a>
+            <a href="#" class="header__logo">
+              <img
+                src="./images/logo/logo-namu.svg"
+                alt="logo"
+                class="logo"
+              >
+            </a>
+          </div>
+
+          <div class="header__background"></div>
+
+          <div class="header__info">
+            <h1 class="header__title">ХУДОЖНІЙ<br>МУЗЕЙ</h1>
+
+            <a href="#" class="header__button">
+              <span class="header__button--text">КВИТКИ</span>
+              <span class="header__button--square"></span>
+            </a>
+
+
+          </div>
+          <a href="#events" class="header__link">ПОДІЇ</a>
+        </div>
+      </div>
+    </header>
+
+    <nav class="menu page__menu" id="menu">
+      <div class="container">
+        <div class="menu__content">
+          <div class="menu__nav">
+            <!-- <a href="#" class="menu__close"></a> -->
+
+            <div class="menu__action">
+              <a href="#" class="menu__close"></a>
+              <div class="menu__gallery">
+                <ul class="menu__list">
+                  <li class="menu__item">
+                    <a href="#gallery" class="menu__link">Галерея</a>
+                  </li>
+                  <li class="menu__item">
+                    <a href="#events" class="menu__link">Виставки та<br> події</a>
+                  </li>
+                </ul>
+              </div>
+
+              <div class="menu__about">
+                <ul class="menu__list">
+                  <li class="menu__item">
+                    <a href="#subscription" class="menu__link">Про Нас</a>
+                  </li>
+                  <li class="menu__item">
+                    <a href="#about_us" class="menu__link">Контакти</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+
+            <span class="menu__line"></span>
+
+            <div class="menu__schedule">
+              <div class="menu__schedule-work">
+                <h3 class="menu__schedule-work--title">
+                  Графік роботи
+                </h3>
+                <ul class="menu__schedule-work--list">
+                  <li class="menu__schedule-work--item">
+                    <span class="menu__schedule-work--time">
+                      12:00 — 20:00
+                    </span>
+                    середа
+                  </li>
+                  <li class="menu__schedule-work--item">
+                    <span class="menu__schedule-work--time">
+                      12:00 — 20:00
+                    </span>
+                    четвер
+                  </li>
+                  <li class="menu__schedule-work--item">
+                    <span class="menu__schedule-work--time">
+                      12:00 — 20:00
+                    </span>
+                    п’ятниця
+                  </li>
+                  <li class="menu__schedule-work--item">
+                    <span class="menu__schedule-work--time">
+                      11:00 — 19:00
+                    </span>
+                    субота
+                  </li>
+                  <li class="menu__schedule-work--item">
+                    <span class="menu__schedule-work--time">
+                      11:00 — 19:00
+                    </span>
+                     неділя
+                  </li>
+                </ul>
+              </div>
+
+              <div class="menu__schedule-holiday">
+                <p class="menu__schedule-holiday--text">
+                  <span class="menu__schedule-holiday--holiday">Вихідні:</span>
+                  понеділок, вівторок
+                </p>
+                <p class="menu__schedule-holiday--info"> Каса припиняє роботу за 1 годину до закриття музею</p>
+              </div>
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </nav>
+
+    <main>
+      <section class="events" id="events">
+        <div class="container">
+          <div class="events__content">
+            <h2 class="events__title">Актуальні події</h2>
+
+            <!-- <div class="events__block"> -->
+            <div class="events__block--image">
+              <img
+                src="./images/events-1.png"
+                alt="Йду і повертаюсь"
+                class="events__image"
+              >
+            </div>
+            <div class="events__info">
+              <div class="events__exhibition">
+                <p class="events__exhibition--text">ВИСТАВКА</p>
+                <p class="events__exhibition--date">26.08-29.11.2019</p>
+              </div>
+
+              <div class="events__info-block">
+
+                <p class="events__info-block--titel">Йду і повертаюсь</p>
+
+                <p class="events__info-block--text">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</p>
+              </div>
+            </div>
+
+            <!-- </div> -->
+
+            <!-- <div class="events__block"> -->
+            <div class="events__block--image">
+              <img
+                src="./images/events-2.png"
+                alt="І спогади і мрії"
+                class="events__image"
+              >
+            </div>
+
+            <div class="events__info">
+              <div class="events__exhibition">
+                <p class="events__exhibition--text">ВИСТАВКА</p>
+                <p class="events__exhibition--date">26.08-29.11.2019</p>
+              </div>
+
+              <div class="events__info-block">
+                <h3 class="events__info-block--titel">І спогади і мрії</h3>
+
+                <p class="events__info-block--text">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</p>
+              </div>
+            </div>
+
+            <!-- </div> -->
+          </div>
+        </div>
+        <div class="lection">
+          <div class="lection__image"></div>
+
+          <div class="lection__info">
+            <div class="lection__info-block">
+              <p class="lection__info-block--text">ЛЕКЦІЯ</p>
+              <p class="lection__info-block--date">26/08/2019 - 11:00</p>
+            </div>
+
+            <h3 class="lection__info-titel">Від класицизму до романтизму</h3>
+          </div>
+        </div>
+      </section>
+
+      <section class="gallery" id="gallery">
+        <div class="container">
+          <h2 class="gallery__title">Галерея</h2>
+
+          <div class="gallery__content">
+            <div class="gallery__content-photo gallery__content-photo--1">
+              <img
+                src="./images/content-img-1.png"
+                alt="Contant photo"
+                class="gallery__content-photo--img"
+              >
+            </div>
+
+            <div class="gallery__content-photo gallery__content-photo--2">
+              <img
+                src="./images/content-img-2.png"
+                alt="Contant photo"
+                class="gallery__content-photo--img"
+              >
+            </div>
+          </div>
+
+          <div class="gallery__desktop">
+            <div class="gallery__photo gallery__photo-1">
+              <img
+                src="./images/gallery-img-1.png"
+                alt="Gallery photo"
+                class="gallery__img"
+              >
+            </div>
+
+            <div class="gallery__photo gallery__photo-2">
+              <img
+                src="./images/gallery-img-2.png"
+                alt="Gallery photo"
+                class="gallery__img"
+              >
+            </div>
+
+            <div class="gallery__photo gallery__photo-3">
+              <img
+                src="./images/gallery-img-3.png"
+                alt="Gallery photo"
+                class="gallery__img"
+              >
+            </div>
+
+            <div class="gallery__photo gallery__photo-4">
+              <img
+                src="./images/gallery-img-4.png"
+                alt="Gallery photo"
+                class="gallery__img"
+              >
+            </div>
+
+          </div>
+        </div>
+        <div class="container__slider">
+          <div class="slider">
+            <div class="slider__photo">
+              <img
+                src="./images/gallery-img-1.png"
+                alt="slide"
+                class="slider__img"
+                id="slide-1"
+              >
+              <img
+                src="./images/gallery-img-2.png"
+                alt="slide"
+                class="slider__img"
+                id="slide-2"
+              >
+              <img
+                src="./images/gallery-img-3.png"
+                alt="slide"
+                class="slider__img"
+                id="slide-3"
+              >
+              <img
+                src="./images/gallery-img-4.png"
+                alt="slide"
+                class="slider__img"
+                id="slide-4"
+              >
+            </div>
+
+            <div class="slider__controls">
+              <a href="#slide-1" class="slider__controls--link"></a>
+              <a href="#slide-2" class="slider__controls--link"></a>
+              <a href="#slide-3" class="slider__controls--link"></a>
+              <a href="#slide-4" class="slider__controls--link"></a>
+            </div>
+          </div>
+        </div>
+
+      </section>
+
+      <section class="subscription" id="subscription">
+        <div class="container">
+          <div class="subscription__content">
+            <h2 class="subscription__title">Підписка</h2>
+
+            <p class="subscription__text">Бути в курсі всіх актуальних подій та останніх новин.</p>
+
+            <form
+              action="#"
+              method="post"
+              class="subscription__form"
+            >
+              <input
+                type="email"
+                name="email"
+                placeholder="E-mail"
+                class="subscription__form--field"
+                required
+              >
+
+              <button
+                class="subscription__form--button"
+                type="submit"
+              ></button>
+            </form>
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <footer class="footer" id="about_us">
+      <div class="container container__footer">
+        <div class="footer__top">
+          <div class="footer__top--logo">
+            <a
+              href="#"
+            >
+              <img
+                src="./images/logo/logo-namu.svg"
+                alt="NAMU"
+              >
+            </a>
+          </div>
+          <div class="footer__top--social">
+            <a
+              href="https://www.facebook.com/namu.museum/?locale=uk_UA"
+              class="footer__icon"
+            >
+              <img
+                src="./images/icon/facebook-letter-logo.svg"
+                alt="Facebook NAMU"
+                class="footer__icon--facebook"
+              >
+            </a>
+
+            <a
+              href="https://www.facebook.com/namu.museum/?locale=uk_UA"
+              class="footer__icon"
+            >
+              <img
+                src="./images/icon/instagram-logo.svg"
+                alt="Instagram NAMU"
+                class="footer__icon--instagram"
+              >
+            </a>
+          </div>
+        </div>
+
+        <div class="footer__schedule">
+          <div class="footer__schedule-work">
+            <h3 class="footer__schedule-work-title">
+              Графік роботи
+            </h3>
+            <ul class="footer__schedule-work-list">
+              <li class="footer__schedule-work--item">
+                <span class="footer__schedule-work--time">
+                  12:00 — 20:00
+                </span>
+                середа
+              </li>
+              <li class="footer__schedule-work--item">
+                <span class="footer__schedule-work--time">
+                  12:00 — 20:00
+                </span>
+                четвер
+              </li>
+              <li class="footer__schedule-work--item">
+                <span class="footer__schedule-work--time">
+                  12:00 — 20:00
+                </span>
+                п’ятниця
+              </li>
+              <li class="footer__schedule-work--item">
+                <span class="footer__schedule-work--time">
+                  11:00 — 19:00
+                </span>
+                субота
+              </li>
+              <li class="footer__schedule-work--item">
+                <span class="footer__schedule-work--time">
+                  11:00 — 19:00
+                </span>
+                 неділя
+              </li>
+            </ul>
+          </div>
+
+          <div class="footer__schedule-holiday">
+            <p class="footer__schedule-holiday--text">
+              <span class="footer__schedule-holiday--holiday">Вихідні:</span>
+              понеділок, вівторок
+            </p>
+            <p class="footer__schedule-holiday--info"> Каса припиняє роботу за 1 годину до закриття музею</p>
+          </div>
+        </div>
+
+        <div class="footer__contacts">
+          <h3 class="footer__contacts-title">Контакти:</h3>
+
+          <div class="footer__contacts-info">
+            <a
+              href="https://goo.gl/maps/UE98byYZxSGkXhEr9"
+              class="footer__contacts-info--link"
+              target="_blank"
+            >
+              вул. М. Грушевського, 6; Київ, 01001
+            </a>
+
+            <a
+              href="+38 (044) 278-13-57"
+              class="footer__contacts-info--link"
+            >
+              тел. +38 (044) 278-13-57 факс +38 (044) 278-74-54
+            </a>
+
+            <a
+              href="mailto:info@namu.kiev.ua"
+              class="footer__contacts-info--link"
+            >
+              e-mail: info@namu.kiev.ua
+            </a>
+          </div>
+
+          <a
+            href="#"
+            class="footer__button"
+            id="scrollToTopButton"
+          >
+
+          </a>
+        </div>
+
+        <span class="footer__line"></span>
+
+
+        <div class="footer__gallery">
+          <ul class="footer__list">
+            <li class="footer__item">
+              <a href="#gallery" class="footer__link">Галерея</a>
+            </li>
+            <li class="footer__item">
+              <a href="#events" class="footer__link">Виставки та<br> події</a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="footer__about">
+          <ul class="footer__list">
+            <li class="footer__item">
+              <a href="#subscription" class="footer__link">Про Нас</a>
+            </li>
+            <li class="footer__item">
+              <a href="#about_us" class="footer__link">Контакти</a>
+            </li>
+          </ul>
+        </div>
+
+
+        <div class="footer__bottom">
+          <p class="footer__bottom--copyright">Copyright © 2019. All Rights Reserved.</p>
+          <p class="footer__bottom--designed">Designed by Zhyriada Marina</p>
+        </div>
+      </div>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
