--- a/src/index.html
+++ b/src/index.html
@@ -306,7 +306,7 @@
             <form
               action="#"
               method="post"
-              class="subscription__form"
+              class="subscription__form page__section--send"
             >
               <input
                 type="email"
@@ -480,7 +480,6 @@
         </div>
       </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
