--- a/src/index.html
+++ b/src/index.html
@@ -87,19 +87,19 @@
               <div class="menu__block">
                 <ul class="menu__schedule">
                   <li class="shedule__item shedule__item--aside">
-                    <span class="time time--aside">12:00— 20:00</span> середа
+                    <span class="time time--aside">12:00— 20:00 середа</span> 
                   </li>
                   <li class="shedule__item shedule__item--aside">
-                    <span class="time time--aside">12:00— 20:00</span> четвер
+                    <span class="time time--aside">12:00— 20:00 четвер</span> 
                   </li>
                   <li class="shedule__item shedule__item--aside">
-                    <span class="time time--aside">12:00 — 20:00 </span>п’ятниця
+                    <span class="time time--aside">12:00 — 20:00 п’ятниця</span>
                   </li>
                   <li class="shedule__item shedule__item--aside">
-                    <span class="time time--aside">11:00 — 19:00</span> субота
+                    <span class="time time--aside">11:00 — 19:00 субота</span> 
                   </li>
                   <li class="shedule__item shedule__item--aside">
-                    <span class="time time--aside">11:00 — 19:00</span> неділя
+                    <span class="time time--aside">11:00 — 19:00 неділя</span>
                   </li>
                 </ul>
               </div>
