--- a/src/index.html
+++ b/src/index.html
@@ -37,9 +37,11 @@
               <span class="header__button--square"></span>
             </a>
 
+            <a href="#events" class="header__link">ПОДІЇ</a>
+
 
           </div>
-          <a href="#events" class="header__link">ПОДІЇ</a>
+
         </div>
       </div>
     </header>
@@ -343,6 +345,7 @@
             <a
               href="https://www.facebook.com/namu.museum/?locale=uk_UA"
               class="footer__icon"
+              target="_blank"
             >
               <img
                 src="./images/icon/facebook-letter-logo.svg"
@@ -354,6 +357,7 @@
             <a
               href="https://www.facebook.com/namu.museum/?locale=uk_UA"
               class="footer__icon"
+              target="_blank"
             >
               <img
                 src="./images/icon/instagram-logo.svg"
@@ -421,21 +425,21 @@
               class="footer__contacts-info--link"
               target="_blank"
             >
-              вул. М. Грушевського, 6; Київ, 01001
+              вул. М. Грушевського, 6;<br>Київ, 01001
             </a>
 
             <a
               href="+38 (044) 278-13-57"
               class="footer__contacts-info--link"
             >
-              тел. +38 (044) 278-13-57 факс +38 (044) 278-74-54
+              <br>тел. +38 (044) 278-13-57<br>факс +38 (044) 278-74-54
             </a>
 
             <a
               href="mailto:info@namu.kiev.ua"
               class="footer__contacts-info--link"
             >
-              e-mail: info@namu.kiev.ua
+              <br>e-mail: info@namu.kiev.ua
             </a>
           </div>
 
