--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,15 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>NaMU</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link
+      rel="shortcut icon"
+      href="images/logo.svg"
+      type="image/x-icon"
+    >
     <link rel="stylesheet" href="./styles/index.scss">
   </head>
   <!-- #endregion -->
@@ -28,7 +33,7 @@
       </div>
     </header>
 
-    <aside class="menu" id="menu">
+    <aside class="menu page__menu" id="menu">
       <a href="#home" class="icon icon-close icon-top"></a>
       <nav class="menu__nav nav">
         <ul class="nav__list">
