fix text and photo

--- a/src/index.html
+++ b/src/index.html
@@ -87,19 +87,19 @@
               <div class="menu__block">
                 <ul class="menu__schedule">
                   <li class="shedule__item shedule__item--aside">
-                    <span class="time time--aside">12:00— 20:00 середа</span> 
+                    <span class="time time--aside">12:00 — 20:00</span> середа
                   </li>
                   <li class="shedule__item shedule__item--aside">
-                    <span class="time time--aside">12:00— 20:00 четвер</span> 
+                    <span class="time time--aside">12:00 — 20:00</span> четвер
                   </li>
                   <li class="shedule__item shedule__item--aside">
-                    <span class="time time--aside">12:00 — 20:00 п’ятниця</span>
+                    <span class="time time--aside">12:00 — 20:00</span> п’ятниця
                   </li>
                   <li class="shedule__item shedule__item--aside">
-                    <span class="time time--aside">11:00 — 19:00 субота</span> 
+                    <span class="time time--aside">11:00 — 19:00</span> субота
                   </li>
                   <li class="shedule__item shedule__item--aside">
-                    <span class="time time--aside">11:00 — 19:00 неділя</span>
+                    <span class="time time--aside">11:00 — 19:00</span> неділя
                   </li>
                 </ul>
               </div>
@@ -363,13 +363,13 @@
                     <div class="menu__block">
                       <ul class="menu__schedule">
                         <li class="shedule__item">
-                          <span class="time">12:00— 20:00</span> середа
+                          <span class="time">12:00 — 20:00</span> середа
                         </li>
                         <li class="shedule__item">
-                          <span class="time">12:00— 20:00</span> четвер
+                          <span class="time">12:00 — 20:00</span> четвер
                         </li>
                         <li class="shedule__item">
-                          <span class="time">12:00 — 20:00 </span>п’ятниця
+                          <span class="time">12:00 — 20:00 </span> п’ятниця
                         </li>
                         <li class="shedule__item">
                           <span class="time">11:00 — 19:00</span> субота
