--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,66 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <title>Title</title>
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page__body">
+    <header class="header">
+      <div class="header__container">
+        <div class="top-bar">
+          <div class="top-bar__container">
+            <a href="#menu" class="top-bar__menu"></a>
+            <a href="#" class="top-bar__link">Na<br>mu</a>
+          </div>
+        </div>
+
+        <div class="header__bottom">
+          <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
+          <div class="header__button__container">
+            <button class="header__button">Квитки</button>
+            <button class="header__button__second">
+              <a href="#" class="header__button__arrow"></a>
+            </button>
+          </div>
+          <h2 class="header__second__title">Актуальні події</h2>
+        </div>
+      </div>
+    </header>
+
+    <aside class="page__menu aside" id="menu">
+      <div class="aside__container">
+        <a href="#" class="aside__close"></a>
+
+        <nav class="nav">
+          <ul class="nav__list">
+            <li class="nav__item">
+              <a class="nav__link" href="#Galery">Галерея</a>
+            </li>
+          </ul>
+          <ul class="nav__list">
+            <li class="nav__item">
+              <a class="nav__link" href="#">Про Нас</a>
+            </li>
+          </ul>
+          <ul class="nav__list">
+            <li class="nav__item">
+              <a class="nav__link" href="#">Виставки та події</a>
+            </li>
+          </ul>
+          <ul class="nav__list">
+            <li class="nav__item">
+              <a class="nav__link" href="#">Контакти</a>
+            </li>
+          </ul>
+
+        </nav>
+      </div>
+    </aside>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
