--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     <script type="text/javascript" src="scripts/main.js"></script>
   </head>
   <body class="page__body">
-    <header class="header" id="top">
+    <header class="page__header header" id="top">
       <div class="header__content">
         <div class="header__top-bar">
           <div class="header__menu">
@@ -45,49 +45,49 @@
           </div>
         </div>
       </div>
-      <aside class="page__menu menu" id="menu">
-        <div class="menu__content">
-          <div class="menu__top">
-            <a class="icon icon--close" href="#"></a>
-            <nav class="menu__nav">
-              <ul class="menu__list menu__list--width">
-                <a class="menu__item" href="#gallery">Галерея</a>
-                <a class="menu__item" href="#events">Виставки та події</a>
-              </ul>
-              <ul class="menu__list">
-                <a class="menu__item" href="#about-us">Про Нас</a>
-                <a class="menu__item" href="#contacts">Контакти</a>
-              </ul>
-            </nav>
+    </header>
+    <aside class="page__menu menu" id="menu">
+      <div class="menu__content">
+        <div class="menu__top">
+          <a class="icon icon--close" href="#"></a>
+          <nav class="menu__nav">
+            <ul class="menu__list menu__list--width">
+              <a class="menu__item" href="#gallery">Галерея</a>
+              <a class="menu__item" href="#events">Виставки та події</a>
+            </ul>
+            <ul class="menu__list">
+              <a class="menu__item" href="#about-us">Про Нас</a>
+              <a class="menu__item" href="#contacts">Контакти</a>
+            </ul>
+          </nav>
+        </div>
+        <div class="menu__line"></div>
+        <div class="menu__main">
+          <div class="menu__title">
+            <h3>Графік роботи</h3>
           </div>
-          <div class="menu__line"></div>
-          <div class="menu__main">
-            <div class="menu__title">
-              <h3>Графік роботи</h3>
+          <div class="menu__container">
+            <div class="menu__schedule">
+              <p>
+                <span class="menu__schedule--span">12:00 — 20:00</span> середа <br>
+                <span class="menu__schedule--span">12:00 — 20:00</span> четвер <br>
+                <span class="menu__schedule--span">12:00 — 20:00</span> п’ятниця <br>
+                <span class="menu__schedule--span">11:00 — 19:00</span> субота <br>
+                <span class="menu__schedule--span">11:00 — 19:00</span> неділя <br>
+              </p>
             </div>
-            <div class="menu__container">
-              <div class="menu__schedule">
-                <p>
-                  <span class="menu__schedule--span">12:00 — 20:00</span> середа <br>
-                  <span class="menu__schedule--span">12:00 — 20:00</span> четвер <br>
-                  <span class="menu__schedule--span">12:00 — 20:00</span> п’ятниця <br>
-                  <span class="menu__schedule--span">11:00 — 19:00</span> субота <br>
-                  <span class="menu__schedule--span">11:00 — 19:00</span> неділя <br>
-                </p>
-              </div>
-              <div class="menu__text">
-                <p>
-                  <span class="menu__text--span">Вихідні:</span> понеділок, вівторок <br>
-                  Каса припиняє роботу за 1 годину
-                  до закриття музею
-                </p>
-              </div>
+            <div class="menu__text">
+              <p>
+                <span class="menu__text--span">Вихідні:</span> понеділок, вівторок <br>
+                Каса припиняє роботу за 1 годину
+                до закриття музею
+              </p>
             </div>
           </div>
         </div>
-      </aside>
-    </header>
-    <main class="main">
+      </div>
+    </aside>
+    <main class="page__main main">
       <section class="page__section event" id="events">
         <div class="event__content">
           <div class="event__title">
@@ -112,7 +112,7 @@
               <div class="event__text">
                 <p>
                   Національний Художній Музей України презентує унікальну частину
-                  колекції Градобанку - українське мистецтво другої половини 1980-1995
+                  колекції Градобанку - українське мистецтво другої половини <br class="event__br--mobile-desktop"> 1980-1995
                   років.
                 </p>
               </div>
@@ -375,7 +375,7 @@
             </div>
             <div class="footer__text">
               <p>
-                вул. М. Грушевського, 6; Київ, 01001 <br>
+                <a href="https://www.google.com.ua/maps/place/%D1%83%D0%BB.+%D0%9C%D0%B8%D1%85%D0%B0%D0%B8%D0%BB%D0%B0+%D0%93%D1%80%D1%83%D1%88%D0%B5%D0%B2%D1%81%D0%BA%D0%BE%D0%B3%D0%BE,+6,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4494431,30.5281844,17z/data=!3m1!4b1!4m6!3m5!1s0x40d4ce524453048d:0x49a2895b6cb43e10!8m2!3d50.4494397!4d30.5307593!16s%2Fg%2F1tj901fm?entry=ttu" target="_blank">вул. М. Грушевського, 6; Київ, 01001 <br></a>
                 <a href="tel:+380442781357">тел. +38 (044) <br class="footer__br--mobile"> 278-13-57 <br></a>
                 <a href="tel:+380442787454">факс +38 (044) <br class="footer__br--fax"> 278-74-54 <br></a>
                 <a href="mailto:info@namu.kiev.ua">e-mail: info@namu.kiev.ua</a>
