add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -14,9 +14,10 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <!-- #endregion -->
-  <body class="page__body">
+  <body class="page__body page__body--with-menu">
     <script type="text/javascript" src="scripts/main.js"></script>
     <!-- #region header -->
+    <div class="page__mask"></div>
     <header class="header">
       <div class="header__top">
         <a href="#" class="logo">
@@ -35,6 +36,11 @@
           <a href="#" class="tickets__content">КВИТКИ</a>
 
           <a href="#" class="tickets__link"></a>
+        </div>
+
+        <div class="tickets__action">
+          <div class="tickets__verticle-line"></div>
+          <div class="tickets__verticle-text">події</div>
         </div>
       </div>
     </header>
@@ -101,6 +107,7 @@
         </div>
       </div>
     </aside>
+
     <!-- endregion -->
     <main class="page__main">
       <section class="events" id="events">
@@ -280,6 +287,7 @@
             action="https://mate-academy-form-lesson.herokuapp.com/create-application" 
             class="subscription__bottom" 
             method="post"
+            onsubmit="this.reset();"
           >
             <input
               type="email"
